--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
   "config": {},
   "dependencies": {},
   "devDependencies": {
+    "cheerio": "^1.0.0-rc.3",
+    "escape-string-regexp": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
-    "prettier": "^1.17.0"
+    "fast-html-parser": "^1.0.1",
+    "prettier": "^1.17.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7"
   },
   "peerDependencies": {},
   "engines": {},
