--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "https://github.com/jagaapple/aws-actions-list.git"
   },
   "scripts": {
+    "lint": "eslint .",
     "fix": "eslint --fix ."
   },
   "config": {},
