--- a/package.json
+++ b/package.json
@@ -27,17 +27,17 @@
   },
   "config": {},
   "dependencies": {
-    "inquirer": "^6.3.1"
-  },
-  "devDependencies": {
     "cheerio": "^1.0.0-rc.3",
     "escape-string-regexp": "^2.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.2.0",
     "fast-html-parser": "^1.0.1",
-    "prettier": "^1.17.0",
+    "inquirer": "^6.3.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.2.0",
+    "prettier": "^1.17.0"
   },
   "peerDependencies": {},
   "engines": {},
