--- a/package.json
+++ b/package.json
@@ -32,19 +32,18 @@
     "commander": "^2.20.0"
   },
   "devDependencies": {
-    "@oclif/config": "^1.12.12",
     "@types/cheerio": "^0.22.11",
     "@types/inquirer": "^6.0.1",
     "@types/js-yaml": "^3.12.1",
     "@types/request-promise-native": "^1.0.16",
     "cheerio": "^1.0.0-rc.3",
-    "cli-ux": "^5.2.1",
     "escape-string-regexp": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
     "fast-html-parser": "^1.0.1",
     "inquirer": "^6.3.1",
     "js-yaml": "^3.13.1",
+    "ora": "^3.4.0",
     "prettier": "^1.17.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
