--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "scripts": {
     "start": "node ./src/index.js",
-    "lint": "eslint .",
-    "fix": "eslint --fix ."
+    "lint": "eslint ./src/**/*.ts",
+    "fix": "eslint --fix ./src/**/*.ts"
   },
   "config": {},
   "dependencies": {
@@ -36,10 +36,12 @@
     "@types/inquirer": "^6.0.1",
     "@types/js-yaml": "^3.12.1",
     "@types/request-promise-native": "^1.0.16",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
     "cheerio": "^1.0.0-rc.3",
     "escape-string-regexp": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "fast-html-parser": "^1.0.1",
     "inquirer": "^6.3.1",
     "js-yaml": "^3.13.1",
