--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "scripts": {
     "start": "node ./src/index.js",
+    "prebuild": "rm -rf ./.dist",
+    "build": "webpack",
     "lint": "eslint ./src/**/*.ts",
     "fix": "eslint --fix ./src/**/*.ts"
   },
@@ -49,7 +51,10 @@
     "prettier": "^1.17.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
-    "typescript": "^3.4.5"
+    "ts-loader": "^5.4.5",
+    "typescript": "^3.4.5",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.2"
   },
   "peerDependencies": {},
   "engines": {},
