--- a/package.json
+++ b/package.json
@@ -31,7 +31,14 @@
   },
   "config": {},
   "dependencies": {
-    "commander": "^2.20.0"
+    "cheerio": "^1.0.0-rc.3",
+    "commander": "^2.20.0",
+    "escape-string-regexp": "^2.0.0",
+    "fast-html-parser": "^1.0.1",
+    "inquirer": "^6.3.1",
+    "ora": "^3.4.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.11",
@@ -39,18 +46,11 @@
     "@types/js-yaml": "^3.12.1",
     "@types/request-promise-native": "^1.0.16",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "cheerio": "^1.0.0-rc.3",
-    "escape-string-regexp": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "fast-html-parser": "^1.0.1",
-    "inquirer": "^6.3.1",
     "js-yaml": "^3.13.1",
-    "ora": "^3.4.0",
     "prettier": "^1.17.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7",
     "ts-loader": "^5.4.5",
     "typescript": "^3.4.5",
     "webpack": "^4.30.0",
