[Change] Change built files output path to `lib`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,7 @@
   "files.watcherExclude": {
     "**/.git/objects/**": true,
     "**/node_modules/**": true,
-    ".dist/**": true
+    "lib/**": true
   },
 
 
