--- a/package.json
+++ b/package.json
@@ -51,10 +51,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "js-yaml": "^3.13.1",
     "prettier": "^1.17.0",
-    "ts-loader": "^5.4.5",
-    "typescript": "^3.4.5",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.2"
+    "typescript": "^3.4.5"
   },
   "peerDependencies": {},
   "engines": {},
