--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
   "peerDependencies": {},
   "engines": {},
   "engineStrict": false,
-  "preferGlobal": false,
+  "preferGlobal": true,
   "private": true
 }
