--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "typescript": "^3.4.5"
   },
   "peerDependencies": {},
-  "engines": {},
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "engineStrict": false,
   "preferGlobal": true,
   "private": true
