[Fix] Define published target files

--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
   "license": "MIT",
   "author": "Jaga Apple",
   "contributors": [],
-  "files": [],
+  "files": [
+    "bin",
+    "lib",
+    "docs/summary.gif",
+    "CHANGELOG.md",
+    "CODE_OF_CONDUCT.md",
+    "LICENSE",
+    "README.md"
+  ],
   "main": "",
   "bin": {
     "aws-actions-list": "bin/aws-actions-list"
