--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,7 @@
   // ---------------------------------------------------------------------------------------------------------------------------
   // Configure glob patterns for excluding files and folders.
   "files.exclude": {
-    "node_modules": true
+    "**/node_modules/**": true
   },
 
   // Configure glob patterns of file paths to exclude from file watching.
@@ -28,12 +28,17 @@
     "lib/**": true
   },
 
+  // Specifies the folder path containing the tsserver and lib*.d.ts files to use.
+  "typescript.tsdk": "node_modules/typescript/lib",
 
 
   // ---------------------------------------------------------------------------------------------------------------------------
   // Language Setings
   // ---------------------------------------------------------------------------------------------------------------------------
   "[javascript]": {
+    "editor.formatOnSave": true
+  },
+  "[typescript]": {
     "editor.formatOnSave": true
   }
 
