--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,44 +2,65 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details.
 version: 2.1
 jobs:
+  node_v12:
+    working_directory: "~/repo"
+    docker:
+      - image: "node:12.3"
+    steps:
+      - "checkout"
+      - restore_cache:
+          key: "node-v12.3-node-modules-{{ checksum \"package.json\" }}"
+      - run:
+          name: "Install packages"
+          command: "npm install"
+      - save_cache:
+          key: "node-v12.3-node-modules-{{ checksum \"package.json\" }}"
+          paths:
+            - "node_modules"
+      - run:
+          name: "Execute linters"
+          command: "npm run lint"
+      - run:
+          name: "Build"
+          command: "npm run build"
   node_v10:
-    working_directory: "~/repository"
+    working_directory: "~/repo"
     docker:
       - image: "node:10.15"
     steps:
       - "checkout"
       - restore_cache:
-          key: "node-v10.15-dependencies-{{ checksum \"package.json\" }}"
+          key: "node-v10.15-node-modules-{{ checksum \"package.json\" }}"
       - run:
-          name: "Install npm packages"
+          name: "Install packages"
           command: "npm install"
       - save_cache:
-          key: "node-v10.15-dependencies-{{ checksum \"package.json\" }}"
+          key: "node-v10.15-node-modules-{{ checksum \"package.json\" }}"
           paths:
             - "node_modules"
       - run:
-          name: "Exec linters"
+          name: "Execute linters"
           command: "npm run lint"
       - run:
           name: "Build"
           command: "npm run build"
   node_v8:
-    working_directory: "~/repository"
+    working_directory: "~/repo"
     docker:
       - image: "node:8.16"
     steps:
       - "checkout"
       - restore_cache:
-          key: "node-v8.15-dependencies-{{ checksum \"package.json\" }}"
+          key: "node-v8.15-node-modules-{{ checksum \"package.json\" }}"
       - run:
-          name: "Install npm packages"
+          name: "Install packages"
           command: "npm install"
       - save_cache:
-          key: "node-v8.15-dependencies-{{ checksum \"package.json\" }}"
+          key: "node-v8.15-node-modules-{{ checksum \"package.json\" }}"
           paths:
             - "node_modules"
       - run:
-          name: "Exec linters"
+          name: "Execute linters"
           command: "npm run lint"
       - run:
           name: "Build"
@@ -48,5 +69,6 @@ workflows:
   version: 2
   build:
     jobs:
+      - "node_v12"
       - "node_v10"
       - "node_v8"
